--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="col-sm-2">
                         
-                        <button id="SearchButton" class="btn btn-info btn-icon btn-round" type="button" href="#">
+                        <button id="SearchButton" class="btn btn-info btn-icon btn-round" type="button" data-toggle="modal" data-target="#myModal1">
                                         <i class="now-ui-icons ui-1_zoom-bold"></i>
                         </button>
                 </div>
@@ -518,15 +518,14 @@
                 <div class="modal-content">
                     <div class="modal-header justify-content-center">
                         <div class="modal-profile">
-                            <i class="now-ui-icons users_circle-08"></i>
+                            <i class="now-ui-icons ui-1_lock-circle-open"></i>
                         </div>
                     </div>
                     <div class="modal-body">
-                        <p>Always have an access to your profile</p>
+                        <p>Funkcja w fazie beta</p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-link btn-neutral">Back</button>
-                        <button type="button" class="btn btn-link btn-neutral" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-link btn-neutral" data-dismiss="modal">Zamknij</button>
                     </div>
                 </div>
             </div>
