--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </div>
             <div class="container">
                 <div class="content-center brand">
-                    <img class="n-logo" src="./assets/img/now-logo.png" alt="">
+                    <!--<img class="n-logo" src="./assets/img/now-logo.png" alt="">-->
                     <h1 class="h1-seo">Rocznik 2005</h1>
                     <h3>O klasie 6 w Granowcu.</h3>
                 </div>
